kubernetes/apps/default/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: Misc
spec:
  hostnames:
    - "git.${SECRET_DOMAIN}"
  parentRefs:
    - name: external
      namespace: network
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 3000
      timeouts:
        request: 300s
